      back according to the defaults listed in the PDF spec (patch by
      Don Huettl of Grant Street Group).

    - Barcodes now take an optional -caption argument that will be
      printed beneath the barcode.  This can replace or be used in
      conjunction with the text representation of the barcode
      (requested by Gareth Tunley).


2.023     2014-09-12

    - The fix for [RT #69503] broke a previously-working case where a
      page object could be passed (and was expected).  The -firstpage
      option now accepts a page object or a page number.  Thanks to
      Marco Pessotto for the bug report and test.


2.022     2014-07-04

    - Added $pdf->version() get/set method.  When opening an existing
      PDF, the existing version number will now be retained.

    - Renamed the following in PDF::API2:
        - importpage to import_page
        - openScalar to open_scalar

      The old names are deprecated.

    - [RT #69503] Fix the -firstpage option to $pdf->preferences() so
      that it doesn't always lead to a crash (reported by Dietrich
      Streifert).

    - [RT #47974] Accept malformed xref subsections (with a warning)
      that have extraneous spaces on the first line (reported by
      Abhinav Kaushik).

    - [RT #94505] For Code128 barcodes, the initial character set is
      now optional (defaults to B or C depending on the content to be
      encoded).  The initial character set can be passed as a capital
      letter, and the program will die if an invalid character set is
      requested (requested by Andrea Nall).

    - Interleaved 2 of 5 barcodes now prepend a zero when an odd
      number of digits is specified, which is standard behavior.
      Previously, a zero was appended instead.

    - $page->rotate(0) now sets rotation to 0 degrees rather than
      deleting an existing page rotation command.  Page rotation is
      inherited, so this is necessary to undo any inherited page
      rotation.
